# doi-finder

./: .gitignore  LICENSE  PYPI_INSTRUCTIONS.md  README.md  example.py  publish_to_pypi.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
doi_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
find_doi/: __init__.py  __main__.py  cli.py
